--- a/pages/noutati.html
+++ b/pages/noutati.html
@@ -29,7 +29,7 @@
             <a onclick="mobileMenu()" href="../index.html#despre">Despre noi</a>
             <a onclick="mobileMenu()" href="../index.html#galerie">Galerie</a>
             <a onclick="mobileMenu()" href="../index.html#contacte">Contacte</a>
-            <a onclick="mobileMenu()" href="noutati.html">Noutăți</a>
+            <a onclick="mobileMenu()" href="noutăți.html">Noutăți</a>
             <a onclick="mobileMenu()" href="orar.html">Orar</a>
 
             <i  onclick="mobileMenu()" id="hamburger" class="fas fa-bars"></i>
@@ -44,7 +44,7 @@
             
             <div class="noutate">
 
-                <div class="noutate-data">15.05.2024</div>
+                <div class="noutate-data">31.05.2024</div>
                 <h2 class="centered">Ultimul sunet</h2>
 
                 <img  src="../images/ultimul sunet.jpg">
